--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -1,7 +1,37 @@
-version: '3'
+version: '3.8'
+
 services:
-  react-app:
+  frontend:
     build: .
     ports:
-      - "80:80"
+      - "8080:3000"
+    networks:
+      - mynetwork
+    depends_on:
+      - backend
 
+  backend:
+    build: ./backend
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./backend:/usr/src/app
+      - /usr/src/app/node_modules
+    networks:
+      - mynetwork
+    depends_on:
+      - db
+
+  db:
+    image: mongo:4.4
+    volumes:
+      - mongo-data:/data/db
+    networks:
+      - mynetwork
+
+networks:
+  mynetwork:
+    driver: bridge
+    
+volumes:
+  mongo-data:
