--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Build Backend Docker Image
         run: |
-          docker build -t backend-app ./backend
+          docker build -t backend-app
 
       - name: Test Backend Docker Image
         run: |
