--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -15,13 +15,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Going to backend
-        run: |
-          cd project/backend
-
       - name: Build Backend Docker Image
+        working-directory: ./backend
         run: |
-          docker build -t backend-app
+          docker build -t backend-app .
 
       - name: Test Backend Docker Image
         run: |
@@ -35,11 +32,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Going to frontend
-        run: |
-          cd project
-
       - name: Build Frontend Docker Image
+        working-directory: .
         run: |
           docker build -t frontend-app .
 
