--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -32,6 +32,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Install dependencies and build frontend
+        working-directory: .
+        run: |
+          npm install
+          npm run build
+
       - name: Build Frontend Docker Image
         working-directory: .
         run: |
