--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -17,9 +17,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Install Docker Compose
+        run: |
+          sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+          docker-compose --version  # Sprawdzenie wersji docker-compose
+
       - name: Set up Docker Compose
         run: |
-          docker-compose -f ./docker-compose.yml up -d  # Uruchom wszystkie usługi w tle (z backendem, frontendem i db)
+          cd ./project  # Przechodzimy do katalogu z plikiem docker-compose.yml
+          docker-compose -f ./docker-compose.yml up -d  # Uruchomienie kontenerów w tle
 
       - name: Build Backend Docker Image
         working-directory: ./project/backend
@@ -41,4 +48,5 @@ jobs:
 
       - name: Stop and remove containers
         run: |
+          cd ./project  # Przechodzimy do katalogu z plikiem docker-compose.yml
           docker-compose -f ./docker-compose.yml down  # Zatrzymaj i usuń kontenery po teście
