--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -2,7 +2,8 @@ name: Deploy React App to GitHub Pages
 
 on:
   push:
-    branches: ["branch"]
+    branches:
+      - "branch"
 
 jobs:
   build-and-deploy:
@@ -19,16 +20,16 @@ jobs:
 
       - name: Install dependencies
         run: |
-          cd ./project/src  
+          cd ./src
           npm install
 
       - name: Build application
         run: |
-          cd ./project/src  
-          npm run build
+          cd ./src
+          npm run build  # Zmienione z 'start' na 'build'
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./project/src/build
+          publish_dir: ./src/build
