--- a/.github/workflows/app-build-and-deploy.yml
+++ b/.github/workflows/app-build-and-deploy.yml
@@ -26,7 +26,9 @@ jobs:
         working-directory: ./project
 
       - name: Build project
-        run: npm run build
+        run: |
+          npm install @babel/plugin-proposal-private-property-in-object
+          npm run build
         working-directory: ./project
 
       - name: Deploy to GitHub Pages
