--- a/.github/workflows/app-build-and-deploy.yml
+++ b/.github/workflows/app-build-and-deploy.yml
@@ -16,16 +16,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Debug repository structure
-        run: ls -R .
-
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
           node-version: "14"
+
+      - name: Debug repository structure
+        run: ls -R .
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./project/public
+          force_orphan: true
